--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
   image_picker: ^1.0.7
+  file_picker: ^10.3.3
   google_maps_flutter: ^2.6.0
   geolocator: ^13.0.1
   geocoding: ^3.0.0
