--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   http: ^1.2.1
   http_parser: ^4.0.0
   shared_preferences: ^2.2.2
+  # Social login SDKs
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^6.0.4
 
 dev_dependencies:
   flutter_test:
