--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   http_parser: ^4.0.0
   shared_preferences: ^2.2.2
+  pdfx: ^2.0.0
+  url_launcher: ^6.1.10
   # Social login SDKs
   google_sign_in: ^7.2.0
   flutter_facebook_auth: ^7.1.2
