--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ Pillow==11.0.0
 channels==4.0.0
 daphne==4.0.0
 firebase-admin==6.0.0
+# mercadopago and stripe removed as payment providers have been disabled
+python-dotenv==1.0.0
+mercadopago==2.0.0
