--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "qrcode": "^1.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
