--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   google_sign_in: ^7.2.0
   flutter_facebook_auth: ^7.1.2
   intl: ^0.20.2
+  qr_flutter: ^4.0.0
+  qr: ^2.1.0
 
 dev_dependencies:
   flutter_test:
